--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 amqp==5.0.1
 asgiref==3.3.0
+astroid==2.4.2
 backcall==0.2.0
 billiard==3.6.3.0
 celery==5.0.2
+certifi==2020.6.20
+chardet==3.0.4
 click==7.1.2
 click-didyoumean==0.0.3
 click-repl==0.1.6
@@ -11,22 +14,33 @@ Django==3.1.3
 gevent==20.9.0
 greenlet==0.4.17
 gunicorn==20.0.4
+idna==2.10
 ipython==7.19.0
 ipython-genutils==0.2.0
+isort==5.6.4
 jedi==0.17.2
 kombu==5.0.2
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.8
 ptyprocess==0.6.0
 Pygments==2.7.2
+pylint==2.6.0
+pylint-django==2.3.0
+pylint-plugin-utils==0.6
 pytz==2020.4
-redis==3.5.3
+redis==2.10.6
+requests==2.24.0
 six==1.15.0
 sqlparse==0.4.1
+toml==0.10.2
 traitlets==5.0.5
+urllib3==1.25.11
 vine==5.0.0
 wcwidth==0.2.5
+wrapt==1.12.1
 zope.event==4.5.0
 zope.interface==5.2.0
